Added endpoint for registration of users. Added encoder for password.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=store-management-tool
 spring.datasource.url=jdbc:postgresql://localhost:5432/StoreManagementTool
 spring.datasource.username=postgres
 spring.datasource.password=vany
+server.port=8090
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #updates database schema on startup if there are any changes
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.springframework.security=DEBUG
