--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,5 +9,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-logging.level.org.springframework.security=DEBUG
+logging.level.com.example.store_management_tool.advice=DEBUG
